[gd_scene load_steps=14 format=3 uid="uid://dok0pyvneckou"]

[ext_resource type="Script" path="res://game_elements/belt_turntable.gd" id="1_utw1d"]
[ext_resource type="PackedScene" uid="uid://crho7h6t4w6x7" path="res://composition_modules/Linked_Path3D.tscn" id="2_7w5hh"]
[ext_resource type="Texture2D" uid="uid://bs3pm4y6j58h4" path="res://2D_Media/Sprites/Temp_Direction_Arrow_V0.png" id="2_b20g6"]
[ext_resource type="Texture2D" uid="uid://5h1ipeqg7vjp" path="res://2D_Media/Sprites/Mouseover_Highlight_V0.png" id="2_tvmiy"]
[ext_resource type="Curve3D" uid="uid://dya28qelk13vt" path="res://game_elements/belt_turntable_entrance_rear_curve3d.tres" id="3_nd0uo"]
[ext_resource type="Curve3D" uid="uid://daga0jiq0ilrj" path="res://game_elements/belt_turntable_entrance_right_curve3d.tres" id="4_cys10"]
[ext_resource type="Curve3D" uid="uid://bmu1jt0mj3biu" path="res://game_elements/belt_turntable_entrance_left_curve3d.tres" id="5_oy1c7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_it444"]

[sub_resource type="BoxMesh" id="BoxMesh_tlm7r"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nrd52"]
albedo_color = Color(0.129412, 0.129412, 0.129412, 1)

[sub_resource type="Curve3D" id="Curve3D_hlrdh"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0, 0.5, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_aahi1"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, -0.5, 0, 0, 0.5, 0.5, 0, 0, 0, 0, 0, -0.5, 0, 0),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_v0t50"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, -0.5, 0, 0, 0.5, -0.5, 0, 0, 0, 0, 0, 0.5, 0, 0),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[node name="Belt_Turntable" type="StaticBody3D"]
script = ExtResource("1_utw1d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_it444")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_tlm7r")
surface_material_override/0 = SubResource("StandardMaterial3D_nrd52")

[node name="Entrance_Path" type="Node3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Rear_Entrance_Path" parent="MeshInstance3D/Entrance_Path" instance=ExtResource("2_7w5hh")]
curve = ExtResource("3_nd0uo")

[node name="Right_Entrance_Path" parent="MeshInstance3D/Entrance_Path" instance=ExtResource("2_7w5hh")]
curve = ExtResource("4_cys10")

[node name="Left_Entrance_Path" parent="MeshInstance3D/Entrance_Path" instance=ExtResource("2_7w5hh")]
curve = ExtResource("5_oy1c7")

[node name="Exit_Path" type="Node3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -1)

[node name="Forward_Exit_Path" type="Path3D" parent="MeshInstance3D/Exit_Path"]
curve = SubResource("Curve3D_hlrdh")

[node name="Left_Exit_Path" type="Path3D" parent="MeshInstance3D/Exit_Path"]
curve = SubResource("Curve3D_aahi1")

[node name="Right_Exit_Path" type="Path3D" parent="MeshInstance3D/Exit_Path"]
curve = SubResource("Curve3D_v0t50")

[node name="Arrow" type="Sprite3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.511285, 0)
axis = 1
texture = ExtResource("2_b20g6")

[node name="Mouseover_Highlight" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05852, 0)
visible = false
axis = 1
texture = ExtResource("2_tvmiy")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
